test/myngapp.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: myngapp
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: myngapp
    spec:
      containers:
      - name: myngapp
        image: bitmesh.azurecr.io/myngapp:test-#{Build.BuildId}#
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: myregistrykey
---
apiVersion: v1
kind: Service
metadata:
  name: myngapp
spec:
  ports:
  - port: 80
  selector:
    app: myngapp
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myngapp-ingress  
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/issuer: "letsencrypt-prod"
    certmanager.k8s.io/acme-challenge-type: http01
    ingress.kubernetes.io/cache-enable: "false"
spec:   
  rules:
  - host: tmyngapp.bitmesh.no
    http:
      paths:
      - backend:
          serviceName: myngapp
          servicePort: 80
        path: /
  tls:
  - hosts:
    - tmyngapp.bitmesh.no
    secretName: myngapp-tls
